- added two panels, one to user location another to web site location - created a few react components

--- a/src/modules/home/Home.scss
+++ b/src/modules/home/Home.scss
@@ -1,5 +1,13 @@
 @import '../../../public/css/variables';
 
 .Home {
-  // Content here
+  // Content herew
+  .LocationRows{
+    .row {
+      padding: 5px;
+    }
+    span {
+      margin: auto;
+    }
+  }
 }
