- Added react-google-maps - Added maps in the initial page

--- a/public/css/global.scss
+++ b/public/css/global.scss
@@ -10,8 +10,7 @@ body {
 */
 
 .jumbotron {
-  padding-top: 45px;
-  padding-bottom: 45px;
+  padding: 0;
   margin-bottom: 60px;
   background: #18BC9C;
 
